--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "playground-discord-js",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/app.js",
   "scripts": {
     "start": "npm run build:live",
     "build": "tsc -p .",
@@ -14,6 +14,7 @@
     "discord.js": "^12.2.0"
   },
   "devDependencies": {
+    "@types/node": "^14.0.13",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
